Added action buttons to game view.

--- a/views/Games/GamesView.xaml
+++ b/views/Games/GamesView.xaml
@@ -2,7 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:ctrl="clr-namespace:VpdbAgent.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300"
 	  d:DesignWidth="900">
@@ -16,7 +17,9 @@
 
         <!-- LEFT PANEL -->
         <StackPanel Grid.Column="0" Orientation="Vertical">
-            <Label Content="ACTIONS" Style="{StaticResource Header3}" />
+            
+            <!-- SYSTEMS -->
+            <Label Content="SYSTEMS" Style="{StaticResource Header3}" />
             <ItemsControl x:Name="PlatformList">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
@@ -27,6 +30,26 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
+
+            <!-- ACTIONS -->
+            <Label Content="ACTIONS" Style="{StaticResource Header3}" Margin="0,15,0,0" />
+            <!-- identify all -->
+            <Button x:Name="IdentifyAllButton" Style="{StaticResource ButtonLink}" HorizontalAlignment="Left">
+                <StackPanel Orientation="Horizontal" Margin="15,0,0,0">
+                    <ctrl:IconControl Data="{StaticResource IconEye}" Height="16" Width="16" 
+                       HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,7,0" />
+                    <Label Content="Identify All" Foreground="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}"/>
+                </StackPanel>
+            </Button>
+            
+            <!-- download starred -->
+            <Button x:Name="DownloadStarred" Style="{StaticResource ButtonLink}" HorizontalAlignment="Left">
+                <StackPanel Orientation="Horizontal" Margin="15,0,0,0">
+                    <ctrl:IconControl Data="{StaticResource IconStar}" Height="16" Width="16" 
+                       HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,7,0" />
+                    <Label Content="Download Starred" Foreground="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}"/>
+                </StackPanel>
+            </Button>
         </StackPanel>
 
         <!-- SPLITTER -->
