--- a/views/Settings/SettingsView.xaml
+++ b/views/Settings/SettingsView.xaml
@@ -10,7 +10,7 @@
       xmlns:loading="clr-namespace:LoadingIndicators.WPF;assembly=LoadingIndicators.WPF"
       xmlns:valueConverters="clr-namespace:VpdbAgent.Common.ValueConverters"
       mc:Ignorable="d" 
-      d:DesignHeight="1500" d:DesignWidth="800" d:DataContext="{d:DesignInstance Type=vm:SettingsViewModel}">
+      d:DesignHeight="1800" d:DesignWidth="800" d:DataContext="{d:DesignInstance Type=vm:SettingsViewModel}">
 
     <UserControl.Resources>
         <typeConverters:BooleanToVisibilityConverter x:Key="TrueToVisible" True="Visible" False="Collapsed" />
@@ -140,9 +140,59 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Minimize to system tray" Style="{StaticResource Label}" Grid.Column="0" Grid.ColumnSpan="4" Margin="15,0,0,0" />
-                    <ToggleButton IsChecked="{Binding MinimizeToTray}" x:Name="MinimizeToTray" Grid.Column="3" Height="20" Margin="5,0,0,0"/>
+                    <TextBlock Text="Minimize to system tray" Style="{StaticResource Label}" Grid.Column="0" Margin="15,0,0,0" />
+                    <ToggleButton IsChecked="{Binding MinimizeToTray}" x:Name="MinimizeToTray" Grid.Column="1" Height="20" Margin="5,0,0,0"/>
                 </Grid>
+
+
+                <!-- XML Database -->
+                <Label Content="XML Database" Style="{StaticResource Header1}" Margin="0,20,0,0"/>
+                <Separator/>
+
+                <!-- Reformat XMLs -->
+                <Grid Margin="0,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Reformat XMLs when saving" Style="{StaticResource Label}" 
+                               ToolTip="When reformatting, comments in the XML will be stripped."
+                               Grid.Column="0" Margin="15,0,0,0" />
+                    <ToggleButton IsChecked="{Binding MinimizeToTray}" x:Name="ReformatXmls" Grid.Column="1" Height="20" Margin="5,0,0,0"/>
+                </Grid>
+
+                <Grid Margin="0,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Style="{StaticResource Label}" Grid.Column="0" Grid.Row="0" Margin="40,0,0,0">
+                        <TextBlock.Inlines>
+                            <Run Text="For"/>
+                            <Run Text="Visual Pinball," FontWeight="Bold"/>
+                            <Run Text="save new games to:"/>
+                        </TextBlock.Inlines>
+                    </TextBlock>
+                    <ComboBox ItemsSource="{Binding XmlFilesVP}" Text="{Binding XmlFileVP}" IsEditable="True"
+                              Grid.Column="1" Grid.Row="0" Margin="5,-4,0,0" />
+                    <TextBlock Text=".xml" Grid.Column="2"  Grid.Row="0" Style="{StaticResource Label}" Margin="5,0,0,0"/>
+                    <Grid x:Name="XmlFileVpErrorPanel" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Margin="40,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <c:IconControl Foreground="{StaticResource LightRedBrush}" Data="{StaticResource IconWarning}"
+                                   Grid.Column="0" Height="18" Width="18" VerticalAlignment="Top" Margin="0,3,10,0" />
+                        <TextBlock x:Name="XmlFileVpError" Style="{StaticResource Label}" Foreground="{StaticResource LightRedBrush}" 
+                               Grid.Column="1" Text="Error message" TextWrapping="Wrap"/>
+                    </Grid>
+                </Grid>
+
 
                 <!-- Download Options -->
                 <Label Content="Download Options" Style="{StaticResource Header1}" Margin="0,20,0,0"/>
@@ -186,7 +236,7 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Orientation should be:" Style="{StaticResource Label}" Grid.Column="0" Margin="40,0,0,0"/>
                     <ComboBox ItemsSource="{Binding OrientationSettings}" SelectedValue="{Binding DownloadOrientation}"
-                              DisplayMemberPath="Label" SelectedValuePath="Orientation" Grid.Column="1" Margin="5,0,10,0" />
+                              DisplayMemberPath="Label" SelectedValuePath="Orientation" Grid.Column="1" Margin="5,0,0,0" />
                 </Grid>
                 <Grid Margin="0,10,0,0">
                     <Grid.ColumnDefinitions>
@@ -195,7 +245,7 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Lighting should be:" Style="{StaticResource Label}" Grid.Column="0" Margin="40,0,0,0"/>
                     <ComboBox ItemsSource="{Binding LightingSettings}" SelectedValue="{Binding DownloadLighting}"
-                              DisplayMemberPath="Label" SelectedValuePath="Lighting" Grid.Column="1" Margin="5,0,10,0"/>
+                              DisplayMemberPath="Label" SelectedValuePath="Lighting" Grid.Column="1" Margin="5,0,0,0"/>
                 </Grid>
 
                 <!-- Fallback flavor choice -->
@@ -212,7 +262,7 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Orientation must be:" Style="{StaticResource Label}" Grid.Column="0" Margin="40,0,0,0"/>
                     <ComboBox ItemsSource="{Binding OrientationFallbackSettings}" SelectedValue="{Binding DownloadOrientationFallback}"
-                              DisplayMemberPath="Label" SelectedValuePath="Orientation" Grid.Column="1" Margin="5,0,10,0" />
+                              DisplayMemberPath="Label" SelectedValuePath="Orientation" Grid.Column="1" Margin="5,0,0,0" />
                 </Grid>
                 <Grid Margin="0,10,0,0">
                     <Grid.ColumnDefinitions>
@@ -221,7 +271,7 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Lighting must be:" Style="{StaticResource Label}" Grid.Column="0" Margin="40,0,0,0"/>
                     <ComboBox ItemsSource="{Binding LightingFallbackSettings}" SelectedValue="{Binding DownloadLightingFallback}"
-                              DisplayMemberPath="Label" SelectedValuePath="Lighting" Grid.Column="1" Margin="5,0,10,0" />
+                              DisplayMemberPath="Label" SelectedValuePath="Lighting" Grid.Column="1" Margin="5,0,0,0" />
                 </Grid>
                 <Grid Margin="0,10,0,0">
                     <Grid.ColumnDefinitions>
