--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -58,6 +58,12 @@
                 </-->
             </Grid>
 
+
+            <Label Margin="0,0,0,-10">
+                <TextBlock Text="{Binding Game.PinballXGame.Filename}" TextTrimming="CharacterEllipsis" FontSize="22" FontWeight="Bold" />
+            </Label>
+
+
             <!-- second row -->
             <!--TextBlock Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}"
                        Style="{StaticResource Label}" Margin="5,0,0,-5">
