--- a/VpdbAgent/Views/Games/GameItemView.xaml
+++ b/VpdbAgent/Views/Games/GameItemView.xaml
@@ -44,7 +44,7 @@
 
                 <!-- title -->
                 <Label Grid.Column="0" Margin="0,0,0,-10" Grid.ColumnSpan="2">
-                    <TextBlock Text="{Binding Game.PinballXGame.Description}" TextTrimming="CharacterEllipsis" FontSize="22" FontWeight="Bold" />
+                    <TextBlock Text="{Binding Game.XmlGame.Description}" TextTrimming="CharacterEllipsis" FontSize="22" FontWeight="Bold" />
                 </Label>
 
                 <!-- controls -->
@@ -60,7 +60,10 @@
 
 
             <Label Margin="0,0,0,-10">
-                <TextBlock Text="{Binding Game.PinballXGame.Filename}" TextTrimming="CharacterEllipsis" FontSize="22" FontWeight="Bold" />
+                <TextBlock Text="{Binding Game.FileId}" TextTrimming="CharacterEllipsis" FontSize="12" FontWeight="Bold" />
+            </Label>
+            <Label Margin="0,0,0,-10">
+                <TextBlock Text="{Binding Game.FileName}" TextTrimming="CharacterEllipsis" FontSize="22" FontWeight="Bold" />
             </Label>
 
 
